# anki-answer

./: HANDOFF.md  README.md  pyproject.toml  temp.html  test_format.py
anki_ocr/: __init__.py  anki_connect.py  cli.py  core.py  desktop.py  enrich.py  ocr.py
anki_ocr_answer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
output/: bunpou2-clean-106.md  bunpou2-clean-108.md  bunpou2-clean-110.md  bunpou2-clean-112.md  bunpou2-clean-115.md  bunpou2-clean-116.md  bunpou2-clean-117.md  bunpou2-clean-118.md  bunpou2-clean-119.md  bunpou2-clean-121.md  bunpou2-clean-127.md  bunpou2-clean-128.md  bunpou2-clean-129.md  bunpou2-clean-131.md  bunpou2-clean-132.md  bunpou2-clean-14.md  bunpou2-clean-20.md  bunpou2-clean-21.md  bunpou2-clean-25.md  bunpou2-clean-3.md  bunpou2-clean-4.md  bunpou2-clean-41.md  bunpou2-clean-46.md  bunpou2-clean-49.md  bunpou2-clean-53.md  bunpou2-clean-54.md  bunpou2-clean-55.md  bunpou2-clean-57.md  bunpou2-clean-58.md  bunpou2-clean-59.md  bunpou2-clean-60.md  bunpou2-clean-64.md  bunpou2-clean-65.md  bunpou2-clean-66.md  bunpou2-clean-7.md  bunpou2-clean-74.md  bunpou2-clean-78.md  bunpou2-clean-87.md  bunpou2-clean-98.md  bunpou2-dry-run-2.md  (+98 more)
output/grammar/: back_backup.json  corrections.json  deck1.canon.json  deck1.cards.json  (+10 more)
scripts/: add_reverse_word_cards.py  answer_frame.py  answer_frames_run.py  copy_to_grammar.py  fix_corrections.py  fix_explanations.py  grammar_group.py  inspect_decks.py  make_dokkai_method_deck.py  read_circle.py  redo_mondai2.py  refresh_m2_copies.py  yt_listening.py  yt_listening_m4.py
(+6 files in other folders)
